form_takima/TP-kube-01/step-2/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-website
  labels:
    run: simple-website
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-website
  template:
    metadata:
      labels:
        app: simple-website
    spec:
      containers:
        - name: simple-website
          image: registry.gitlab.com/takima-school/images/simple-website:latest
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
      imagePullSecrets:
        - name: takima-school-registry
